Fix footer spacing

--- a/resources/css/login.css
+++ b/resources/css/login.css
@@ -442,7 +442,7 @@
 }
 
 .MainContent {
-  padding: 20px 20px 40px;
+  padding: 20px 20px 80px;
   min-height: 70vh;
 }
 
