--- a/resources/scss/layout/_content.scss
+++ b/resources/scss/layout/_content.scss
@@ -1,4 +1,4 @@
 .MainContent {
-    padding: 20px 20px 40px;
+    padding: 20px 20px 80px;
     min-height: 70vh;
 }
